k8s/Backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nikke-hub-backend-service
  namespace: nikke-hub
  labels:
    app: nikke-hub

spec:
  type: ClusterIP
  selector:
    app: nikke-hub-backend
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nikke-hub-backend
  namespace: nikke-hub
  labels:
    app: nikke-hub

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nikke-hub-backend

  template:
    metadata:
      labels:
        app: nikke-hub-backend

      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
        prometheus.io/path: "/actuator/prometheus"
      
    spec:
      serviceAccountName: prometheus
      containers:
        - name: nikke-hub-backend
          image: hyuse98/nikke-hub-backend:latest
          imagePullPolicy: Always #IfNotPresent
          
          ports:
            - containerPort: 8082
            
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
              
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 120
            periodSeconds: 30
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 120
            periodSeconds: 30
            failureThreshold: 6
