k8s/Gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: nikke-hub
  labels:
    app: nikke-hub

spec:
  type: ClusterIP
  selector:
    app: nikke-hub-gateway
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nikke-hub-gateway
  namespace: nikke-hub
  labels:
    app: nikke-hub

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nikke-hub-gateway

  template:
    metadata:
      labels:
        app: nikke-hub-gateway

    spec:
      containers:
      - name: nikke-hub-gateway
        image: hyuse98/nikke-hub-gateway:latest
        imagePullPolicy: Always #IfNotPresent

        ports:
        - containerPort: 8000

        resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
