k8s/Postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: nikke-hub
  labels:
    app: nikke-hub
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: nikke-hub
  labels:
    app: nikke-hub

spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d

          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - pg_isready -U user -d outpost
            initialDelaySeconds: 30
            periodSeconds: 10

      volumes:
        - name: init-script
          configMap:
            name: postgres-init
            defaultMode: 0755
            
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
