k8s/Redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: nikke-hub
  labels:
    app: nikke-hub
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: nikke-hub
  labels:
    app: nikke-hub

spec:
  serviceName: redis-service
  replicas: 1
  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:7-alpine

          ports:
            - containerPort: 6379

          args: ["--appendonly", "yes"]

          volumeMounts:
            - name: redis-storage
              mountPath: /data

          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"  
              
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
