k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nikke-hub-backend-service
spec:
  type: ClusterIP
  selector:
    app: nikke-hub-backend
  ports:
    - port: 8081
      targetPort: 8081
